[gd_scene load_steps=5 format=3 uid="uid://bocixsijt83oi"]

[ext_resource type="Script" uid="uid://bm3xjkawnqydl" path="res://root/scripts/fase.gd" id="1_topbe"]
[ext_resource type="PackedScene" uid="uid://c86jlwpogfbsp" path="res://root/scenes/scene/game_scene/game_content/player.tscn" id="2_3niwu"]
[ext_resource type="PackedScene" uid="uid://b6trlabjsdh8i" path="res://root/scenes/scene/game_scene/game_content/ui/GameOverScreen.tscn" id="3_gjtp8"]
[ext_resource type="PackedScene" uid="uid://jom8n5j74lep" path="res://root/scenes/scene/game_scene/game_content/bosses/boss.tscn" id="4_x8xtq"]

[node name="Fase" type="Node2D"]
script = ExtResource("1_topbe")

[node name="Player" parent="." instance=ExtResource("2_3niwu")]
position = Vector2(124, 235)

[node name="PlayerStart" type="Marker2D" parent="."]
position = Vector2(246, 421)

[node name="GameOverScreen" parent="." instance=ExtResource("3_gjtp8")]
process_mode = 3

[node name="Boss" parent="." instance=ExtResource("4_x8xtq")]
position = Vector2(1000, 515)

[connection signal="causar_dano" from="." to="Player" method="_on_fase_1_causar_dano"]
[connection signal="game_over" from="Player" to="." method="_on_player_game_over"]
[connection signal="reiniciar_fase" from="GameOverScreen" to="." method="_on_game_over_screen_reiniciar_fase"]
[connection signal="voltar_menu" from="GameOverScreen" to="." method="_on_game_over_screen_voltar_menu"]
